tests/architecture/fixtures/valid/apps/commerce/app-alias.ts
export { legacyProductKeys } from "@/features/products/hooks/legacy-product-query-keys";
