tests/architecture/fixtures/invalid/layer-boundaries/application-barrel.ts
export { legacyProductKeys } from "./application-query-key-barrel";
